--- a/frontend/src/css/hireForm.css
+++ b/frontend/src/css/hireForm.css
@@ -1,4 +1,5 @@
 .left-section-image {
+   
     width: 100%;
     border-radius: 10px;
     transition: transform 0.3s ease;
@@ -9,8 +10,14 @@
     /* Enlarge the image on hover */
 }
 
+.button-div{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
 .hire-freelancer-button {
-    display: block;
+    display: block; 
     width: 50%;
     background-color: #57C675;
     /* Orange color */
@@ -22,7 +29,7 @@
     font-size: 18px;
     font-weight: bold;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    margin-left: 20%;
+    
 }
 
 .hire-freelancer-button:hover {
