--- a/frontend/src/css/projectForm.css
+++ b/frontend/src/css/projectForm.css
@@ -1,7 +1,6 @@
 .right-section-image {
     width: 100%;
     border-radius: 10px;
-    padding-top: 29%;
     padding-right: 2%;
     transition: transform 0.3s ease;
 }
@@ -12,6 +11,7 @@
 }
 
 .project-container {
+    padding-top: 20px;
     width: 100%;
     height: 100%;
     position: relative;
@@ -50,6 +50,13 @@
     align-items: center;
 }
 
+.button_div{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
 .post-project-button {
     display: block;
     width: 50%;
@@ -58,12 +65,13 @@
     color: #fff;
     border: none;
     padding: 15px 0;
+   
     border-radius: 25px;
     cursor: pointer;
     font-size: 18px;
     font-weight: bold;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    margin-left: 20%;
+   
 }
 
 .post-project-button:hover {
@@ -97,4 +105,9 @@
     transform: scale(1.1);
     /* Dynamically change size */
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
+}
+
+
+.front{
+    display: none;
 }
